--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto = update
+
+server.port = 8181
+
+server.servlet.context-path=/crud
